--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   google_fonts: ^6.2.1
   connectivity_plus: ^6.1.4
   flutter_dotenv: ^5.2.1
+  internet_connection_checker: ^3.0.1
+  logger: ^2.6.1
+  another_flushbar: ^1.12.30
 
 dev_dependencies:
   flutter_test:
