--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   internet_connection_checker: ^3.0.1
   logger: ^2.6.1
   another_flushbar: ^1.12.30
+  go_router: ^16.0.0
 
 dev_dependencies:
   flutter_test:
