--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   logger: ^2.6.1
   another_flushbar: ^1.12.30
   go_router: ^16.0.0
+  flutter_localization: ^0.3.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +45,8 @@ flutter:
     - .env.dev
     - .env.prod
     - assets/images/core/
+    - lang/ar.json
+    - lang/en.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
