--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   go_router: ^16.0.0
   flutter_localization: ^0.3.3
   intl: ^0.20.2
+  device_preview: ^1.3.1
+  animate_do: ^4.2.0
 
 dev_dependencies:
   flutter_test:
