--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   intl: ^0.20.2
   device_preview: ^1.3.1
   animate_do: ^4.2.0
+  freezed_annotation: ^3.1.0
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
@@ -38,6 +40,8 @@ dev_dependencies:
 
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.14.4
+  build_runner: ^2.6.0
+  freezed: ^3.2.0
 
 flutter:
   uses-material-design: true
